--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # General dependencies
 python-dotenv>=1.0.0
 requests>=2.31.0
+gunicorn>=21.0.0  # Adicione esta linha
 
 # Twitch integration
 twitchio>=2.10.0
@@ -20,3 +21,5 @@ pytz>=2023.3
 # Logging
 logging>=0.4.9
 
+# Web framework
+flask>=2.0.0  # Adicione também esta linha, pois você está usando Flask
