--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ google-generativeai>=0.8.5
 google-api-python-client>=2.0.0
 google-auth>=2.0.0
 google-auth-oauthlib>=1.0.0
+gspread>=5.0.0  # Certifique-se de que esta linha está adicionada
 
 # Data processing
 pandas>=2.0.0
@@ -23,3 +24,22 @@ logging>=0.4.9
 
 # Web framework
 flask>=2.0.0  # Adicione também esta linha, pois você está usando Flask
+
+# Threading and async support
+concurrent.futures>=3.0.0
+
+# Re específico para wow_comparative.py
+re>=2.2.1  # (Na verdade, não precisa ser instalado, como discutimos antes)
+
+# Para gerenciamento de tokens
+google-auth-httplib2>=0.1.0
+
+# Para gspread com service_account
+oauth2client>=4.1.3
+
+# Possíveis dependências implícitas
+chardet>=4.0.0
+idna>=2.10
+certifi>=2021.10.8
+urllib3>=1.26.7
+six>=1.16.0
